--- a/css/06.css
+++ b/css/06.css
@@ -1,4 +1,12 @@
-
+.section-06{
+    height: 1100px;
+    padding-bottom: 90px;
+    background-image: url('../images/pc-sc06-bck@2x.webp');
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
 @media screen and (min-width: 961px) {
 
 }
