--- a/css/01.css
+++ b/css/01.css
@@ -1,3 +1,10 @@
+.section-01{
+  height: 1957px;
+  background-image: url('../images/pc-head-bck@2x.webp');
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: 1920px 1957px;
+}
 header {
   width: 100%;
   height: 110px;
@@ -13,41 +20,162 @@ header {
   transform: translateY(-50%);
   justify-content: space-between;
 }
-.header-top-left{
+.header-top-left {
   height: fit-content;
-position: relative;
-top:50%;
-transform: translateY(-50%);
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
-.header-top_p{
-font-size: 24px;
-color: #003758;
+.header-top_p {
+  font-size: 24px;
+  color: var(--base-darkblue);
 }
-.header-top-catch{
-    display: grid;
-    width: 429px;
-    height: 34px;
-    background-color: #003758;
-    border-radius: 17px;
-    color: white;
-    line-height: 1.2;
-    text-align: center;
-    align-items: center;
-    margin-bottom: 8px;
+
+.header-top-catch {
+  display: grid;
+  width: 429px;
+  height: 34px;
+  background-color: var(--base-darkblue);
+  border-radius: 17px;
+  color: white;
+  line-height: 1.2;
+  text-align: center;
+  align-items: center;
+  margin-bottom: 8px;
 }
-.header-top-cta-btn_a{
-    display: block;
-    width: 302px;
-    height: fit-content;
-    position: relative;
-    top:50%;
-    transform: translateY(-50%);
+.header-top-cta-btn_a {
+  display: block;
+  width: 302px;
+  height: fit-content;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
-.header-top-cta-btn_img{
-    display: block;
-    width: 100%;
-    height: auto;
+.header-top-cta-btn_img {
+  display: block;
+  width: 100%;
+  height: auto;
 }
+.section-01 h1 {
+  font-size: 65px;
+  font-weight: 600;
+  letter-spacing: -0.08em;
+  line-height: 1;
+  color: var(--base-darkblue);
+}
+.section-01 h2{
+  width: fit-content;
+  margin-top: 50px;
+  background-color: var(--text-pink);
+  color: white;
+  font-size: 33px;
+  font-weight: 600;
+  letter-spacing: -0.04em;
+  line-height: 1;
+}
+.fv_p{
+  margin-top: 20px;
+  font-size: 30px;
+  font-weight: 600;
+  color: var(--text-black);
+  line-height: 1.467;
+}
+
+.fv_th{
+  width: 100%;
+  margin-top: 260px;
+  padding: 20px 0;
+  font-size: 36px;
+  line-height: 1.222;
+  color: white;
+  text-align: center;
+  background-color: var(--base-darkblue);
+}
+.fv-1st_td{
+  width: 100%;
+  padding-top: 36px;
+  font-size: 36px;
+  font-weight: 600;
+letter-spacing: 0.06em;
+color: var(--base-darkblue);
+text-align: center;
+background-color: white;
+}
+.fv-2nd_td{
+  padding: 20px;
+  text-align: left;
+  background-color: white;
+}
+.fv-2nd_td ul li{
+  font-size: 28px;
+  font-weight: 300;
+  letter-spacing: -0.016em;
+  color: var(--text-black);
+}
+.fv-2nd_td ul li::before{
+  /* チェックボックス */
+  content: '';
+  display: inline-block;
+  width: 28px;
+  height: 28px;
+  background-image: url('../images/check-box@2x.webp');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top left;
+  position: relative;
+  top:0.2em;
+}
+.fv-copy{
+  width: fit-content;
+  margin: 54px auto;
+  font-family: "Meiryo", "メイリオ", sans-serif;
+  font-size: 36px;
+  font-weight: bold;
+  color: var(--base-darkblue);
+  text-align: center;
+}
+.fv-memo{
+  width: fit-content;
+  text-align: center;
+  font-size: 18px;
+  font-family: "Meiryo", "メイリオ", sans-serif;
+}
+
+/*  */
+form {
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.form-group {
+  margin-bottom: 20px;
+}
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+}
+.form-group input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+.form-group input[type="submit"] {
+  cursor: pointer;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+}
+.form-group input[type="submit"]:hover {
+  background-color: #0056b3;
+}
+/*  */
+
 
 @media screen and (min-width: 961px) {
 }
