--- a/css/03.css
+++ b/css/03.css
@@ -1,3 +1,42 @@
+.section-03{
+    width: 100%;
+    height: 1840px;
+    padding: 60px 0 96px;
+    background-image: url('../images/pc-sc03-bck@2x.webp');
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+.section-03 .box-a ul{
+    margin: 48px 0 56px;
+}
+.section-03 .box-a ul li{
+    font-size: 30px;
+    font-weight: 600;
+    color: var(--base-darkblue);
+    display: inline-flex;
+    line-height: 1;
+    position: relative;
+    align-items: center;
+}
+.section-03 .box-a ul li::before{
+    content: '';
+    display: inline-block;
+    width: 70px;
+    height: 70px;
+    margin-right: 30px;
+    background-size: 70px 70px;
+}
+.section-03 .box-a ul li:nth-of-type(1)::before{
+    background-image: url('../images/sc03-li-1@2x.webp');
+}
+.section-03 .box-a ul li:nth-of-type(2)::before{
+    background-image: url('../images/sc03-li-2@2x.webp');
+}
+.section-03 .box-a ul li:nth-of-type(3)::before{
+    background-image: url('../images/sc03-li-3@2x.webp');
+}
 
 @media screen and (min-width: 961px) {
 
