--- a/css/04.css
+++ b/css/04.css
@@ -1,3 +1,11 @@
+.section-04{
+    height: 2320px;
+    background-image: url('../images/pc-sc04-bck@2x.webp');
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
 
 @media screen and (min-width: 961px) {
 
