--- a/css/07.css
+++ b/css/07.css
@@ -1,4 +1,12 @@
-
+.section-07{
+    height: 1420px;
+    padding-bottom: 96px;
+    background-image: url('../images/pc-sc07-bck@2x.webp');
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
 @media screen and (min-width: 961px) {
 
 }
