--- a/css/08.css
+++ b/css/08.css
@@ -1,4 +1,11 @@
-
+.section-08{
+height: 1550px;
+background-image: url('../images/pc-sc08-bck@2x.webp');
+background-attachment: fixed;
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center center;    
+}
 @media screen and (min-width: 961px) {
 
 }
