--- a/css/10.css
+++ b/css/10.css
@@ -1,4 +1,10 @@
-
+.section-10{
+    height: 1000px;
+    background-image: url('../images/pc-sc10-bck@2x.webp');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
 @media screen and (min-width: 961px) {
 
 }
