--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ body {
   margin: 0 auto;
   padding: 0 40px;
 }
-.pc-flex img{
+.text-area_img{
   display: block;
   width: 320px;
   height: 200px;
