--- a/css/07.css
+++ b/css/07.css
@@ -1,5 +1,6 @@
 .section-07{
-    height: 1420px;
+    /* height: 1420px; */
+    padding: 90px 0 100px;
     padding-bottom: 96px;
     background-image: url('../images/pc-sc07-bck@2x.webp');
     background-attachment: fixed;
@@ -7,6 +8,11 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
+
+
+
+
+
 @media screen and (min-width: 961px) {
 
 }
