--- a/css/style.css
+++ b/css/style.css
@@ -78,9 +78,32 @@ body {
 .text-red{
   color:red;
 }
+.text-darkblue{
+  color: var(--base-darkblue);
+}
 .text-bold{
   font-weight: bold;
 }
+.form-group {
+  margin-bottom: 30px;
+}
+input[type="email"]{
+  background-color: white;
+  width: 100%;
+  text-align: center;
+  font-size: 24px;
+  line-height: 1;
+  padding: 8px;
+  border-radius: 10px;
+}
+input[type="image"]{
+  display: block;
+  width: 687px;
+  height: auto;
+  /* height: 164px; */
+  margin: 0 auto;
+} 
+
 .fs-120px{
   font-size: 120px;
 }
