--- a/css/05.css
+++ b/css/05.css
@@ -1,64 +1,62 @@
-
-.section-05{
-    padding: 70px 0 72px;
-    background-image: url('../images/pc-sc05-bck@2x.webp');
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+.section-05 {
+  padding: 70px 0 72px;
+  background-image: url("../images/pc-sc05-bck@2x.webp");
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
-.section-05 h2{
-font-size: 48px;
-font-weight: 600;
-line-height: 1.458;
-text-align: center;
-color: var(--base-darkblue);
+.section-05 h2 {
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 1.458;
+  text-align: center;
+  color: var(--base-darkblue);
 }
-.section-05 h3{
-width: 800px;
-margin: 35px auto 0;
-padding: 8px;
-text-align: center;
-font-size: 48px;
-font-weight: 600;
-letter-spacing: -0.08em;
-color: white;
-background-color: var(--base-darkblue);
+.section-05 h3 {
+  width: 800px;
+  margin: 35px auto 0;
+  padding: 8px;
+  text-align: center;
+  font-size: 48px;
+  font-weight: 600;
+  letter-spacing: -0.08em;
+  color: white;
+  background-color: var(--base-darkblue);
 }
-.section-05 h4{
-    width: 100%;
-    padding: 8px;
-    text-align: center;
-    font-size: 48px;
-    font-weight: 600;
-    color: var(--base-darkblue);
+.section-05 h4 {
+  width: 100%;
+  padding: 8px;
+  text-align: center;
+  font-size: 48px;
+  font-weight: 600;
+  color: var(--base-darkblue);
 }
-.profile{
-    width: 880px;
-    height: auto;
-    margin: 0 auto;
-    margin-top: 30px;
-    padding-top: 82px;
-padding-left: 85px;
-    background-image: url('../images/pc-yuzu@2x.webp');
-    background-size: 100% auto;
-    background-repeat: no-repeat;
-    background-position: top center;
+.profile {
+  width: 880px;
+  height: auto;
+  margin: 0 auto;
+  margin-top: 30px;
+  padding-top: 82px;
+  padding-left: 85px;
+  background-image: url("../images/pc-yuzu@2x.webp");
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  background-position: top center;
   font-family: "Meiryo", "メイリオ", sans-serif;
-font-size: 18px;
-    
+  font-size: 18px;
 }
-.profile .name{
-    font-size: 48px;
-    font-weight: 600;
+.profile .name {
+  font-size: 48px;
+  font-weight: 600;
 }
-.profile .romaji{
-    font-size: 24px;
+.profile .romaji {
+  font-size: 24px;
 }
-.profile .title{
-    margin-top: 100px;
-    padding-bottom: 120px;
+.profile .title {
+  margin-top: 100px;
+  padding-bottom: 30px;
+  line-height: 1.5;
 }
 @media screen and (min-width: 961px) {
-
 }
