--- a/css/06.css
+++ b/css/06.css
@@ -1,11 +1,14 @@
 .section-06{
-    height: 1100px;
-    padding-bottom: 90px;
+    /* height: 1100px; */
+    padding: 90px 0 100px;
     background-image: url('../images/pc-sc06-bck@2x.webp');
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+}
+.section-06 .shadow_img{
+    filter: drop-shadow( 5px 5px 5px #777777);
 }
 @media screen and (min-width: 961px) {
 
