--- a/css/08.css
+++ b/css/08.css
@@ -1,10 +1,18 @@
 .section-08{
-height: 1550px;
+/* height: 1550px; */
+padding: 86px 0 100px; 
 background-image: url('../images/pc-sc08-bck@2x.webp');
 background-attachment: fixed;
 background-size: cover;
 background-repeat: no-repeat;
 background-position: center center;    
+}
+.section-08 h2{
+    font-size: 48px;
+    font-weight: 600;
+    line-height: 1.458;
+    letter-spacing: -0.0180em;
+    text-align: center;
 }
 @media screen and (min-width: 961px) {
 
