--- a/css/09.css
+++ b/css/09.css
@@ -1,11 +1,85 @@
-.section-09{
-    height: 2540px;
-    background-image: url('../images/pc-sc08-bck@2x.webp');
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+.section-09 {
+  /* height: 2540px; */
+  padding: 166px 0 90px;
+  background-image: url("../images/pc-sc09-bck@2x.webp");
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
-@media screen and (min-width: 961px) {
+.card {
+  width: 100%;
+  margin-bottom: 140px;
+  padding: 0 80px 50px;
+  background-color: white;
+  position: relative;
+  filter: drop-shadow(3px 3px 3px #333333);
+}
+.section-09 .card:last-of-type {
+  margin-bottom: unset;
+}
+.card img {
+  display: block;
+  position: absolute;
+  top: 137px;
+  right: 40px;
+  width: 207px;
+  height: 197px;
+}
+.card ul {
+  padding-top: 100px;
+}
+.card ul li {
+  font-size: 24px;
+  font-family: "Meiryo", "メイリオ", sans-serif;
+  font-weight: bolder;
+  line-height: 2.167;
+  letter-spacing: -0.016em;
+  color: var(--text-black);
+}
+.card ul li::before {
+  /* チェックボックス */
+  content: "";
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background-image: url("../images/check-box@2x.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top left;
+  position: relative;
+  top: 0.2em;
+  margin-right: 24px;
+}
+.parallelogram {
+  /* position: relative; */
+  position: absolute;
+  /* width: fit-content; */
+  width: 80%;
+  margin: 0 auto;
+  padding: 15px 1% 15px;
+  color: white;
+  font-size: 26px;
+  font-weight: bold;
+  text-align: center;
+  z-index: 200;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 36px;
+}
+.parallelogram::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* border-top: 3px solid; */
+  /* border-bottom: 3px solid; */
+  background: var(--base-darkblue);
+  transform: skew(-15deg);
+  content: "";
+  z-index: -1;
+}
 
+@media screen and (min-width: 961px) {
 }
