--- a/css/10.css
+++ b/css/10.css
@@ -1,10 +1,27 @@
-.section-10{
-    height: 1000px;
-    background-image: url('../images/pc-sc10-bck@2x.webp');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+.section-10 {
+  height: 1000px;
+  padding: 220px 0 180px;
+  background-image: url("../images/pc-sc10-bck@2x.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.section-10 p {
+  width: fit-content;
+  font-family: "Meiryo", "メイリオ", sans-serif;
+  font-size: 18px;
+  line-height: 1.5;
+  text-align: justify;
+  padding-left: 104px;
+}
+p.sign {
+    width: 100%;
+  font-family: "Meiryo", "メイリオ", sans-serif;
+  font-size: 40px;
+  line-height: 1.5;
+  text-align: right;
+  padding-left: unset;
+  padding-right: 104px;
 }
 @media screen and (min-width: 961px) {
-
 }
