--- a/css/01.css
+++ b/css/01.css
@@ -57,6 +57,7 @@ header {
   height: auto;
 }
 .section-01 h1 {
+  margin-top: 8px;
   font-size: 65px;
   font-weight: 600;
   letter-spacing: -0.08em;
