--- a/css/09.css
+++ b/css/09.css
@@ -13,7 +13,9 @@
   padding: 0 80px 50px;
   background-color: white;
   position: relative;
-  filter: drop-shadow(3px 3px 3px #333333);
+  /* filter: drop-shadow(3px 3px 3px #333333); */
+  box-shadow: 0px 5px 5px #cccccc;
+
 }
 .section-09 .card:last-of-type {
   margin-bottom: unset;
@@ -51,34 +53,14 @@
   top: 0.2em;
   margin-right: 24px;
 }
-.parallelogram {
-  /* position: relative; */
+img.parallelogram {
   position: absolute;
-  /* width: fit-content; */
-  width: 80%;
+  width: 896px;
+  height: auto;
   margin: 0 auto;
-  padding: 15px 1% 15px;
-  color: white;
-  font-size: 26px;
-  font-weight: bold;
-  text-align: center;
-  z-index: 200;
+  top: -70px;
   left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 36px;
-}
-.parallelogram::before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  /* border-top: 3px solid; */
-  /* border-bottom: 3px solid; */
-  background: var(--base-darkblue);
-  transform: skew(-15deg);
-  content: "";
-  z-index: -1;
+  transform: translateX(-50%);
 }
 
 @media screen and (min-width: 961px) {
