--- a/css/01.css
+++ b/css/01.css
@@ -55,63 +55,11 @@ header {
   display: block;
   width: 100%;
   height: auto;
+  filter: drop-shadow( 0px 3px 5px #666666);
+  transition: all 0.3s;
 }
-.section-01 h1 {
-  margin-top: 8px;
-  font-size: 65px;
-  font-weight: 600;
-  letter-spacing: -0.08em;
-  line-height: 1;
-  color: var(--base-darkblue);
-}
-.section-01 h2{
-  width: fit-content;
-  margin-top: 50px;
-  background-color: var(--text-pink);
-  color: white;
-  font-size: 33px;
-  font-weight: 600;
-  letter-spacing: -0.04em;
-  line-height: 1;
-}
-.fv_p{
-  margin-top: 20px;
-  font-size: 30px;
-  font-weight: 600;
-  color: var(--text-black);
-  line-height: 1.467;
-}
-
-.fv_th{
-  width: 100%;
-  margin-top: 260px;
-  padding: 20px 0;
-  font-size: 36px;
-  line-height: 1.222;
-  color: white;
-  text-align: center;
-  background-color: var(--base-darkblue);
-}
-.fv-1st_td{
-  width: 100%;
-  padding-top: 36px;
-  font-size: 36px;
-  font-weight: 600;
-letter-spacing: 0.06em;
-color: var(--base-darkblue);
-text-align: center;
-background-color: white;
-}
-.fv-2nd_td{
-  padding: 20px;
-  text-align: left;
-  background-color: white;
-}
-.fv-2nd_td ul li{
-  font-size: 28px;
-  font-weight: 300;
-  letter-spacing: -0.016em;
-  color: var(--text-black);
+.header-top-cta-btn_img:hover{
+  filter: drop-shadow( 0px 3px 5px #333333);
 }
 .fv-2nd_td ul li::before{
   /* チェックボックス */
@@ -126,6 +74,7 @@ background-color: white;
   position: relative;
   top:0.2em;
 }
+
 .fv-copy{
   width: fit-content;
   margin: 54px auto;
@@ -136,6 +85,9 @@ background-color: white;
   text-align: center;
   letter-spacing: -0.03em;
   line-height: 1.5;
+}
+.section-01 .fv-copy{
+  margin-top: 1270px;
 }
 .fv-memo{
   width: fit-content;
