--- a/css/03.css
+++ b/css/03.css
@@ -1,12 +1,19 @@
 .section-03{
     width: 100%;
     height: 1840px;
-    padding: 60px 0 96px;
+    padding: 90px 0 96px;
     background-image: url('../images/pc-sc03-bck@2x.webp');
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+}
+.section03-title_img{
+display: block;
+width: 883px;
+height: auto;
+margin: 0 auto 55px;
+
 }
 .section-03 .box-a ul{
     margin: 48px 0 56px;
