--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body {
   margin: 56px auto 0;
   padding: 60px 40px;
   background-color: white;
-  box-shadow: 10px 5px 5px black;
+  box-shadow: 0px 5px 5px #cccccc;
   font-family: "Meiryo", "メイリオ", sans-serif;
   font-size: 18px;
   line-height: 1.5;
@@ -99,14 +99,22 @@ input[type="email"]{
   padding: 8px;
   border-radius: 10px;
 }
-
+button{
+  display: block;
+  margin: 0 auto;
+}
 button img{
   display: block;
   width: 687px;
   height: auto;
-  margin: 0 auto;
-}
+  filter: drop-shadow( 0px 5px 10px #666666);
+  transition: all 0.3s;
 
+}
+button img:hover{
+  filter: drop-shadow( 0px 5px 10px #333333);
+
+}
 .fs-120px{
   font-size: 120px;
 }
