--- a/css/07.css
+++ b/css/07.css
@@ -17,6 +17,18 @@
 
 
 
-@media screen and (min-width: 961px) {
+@media screen and (max-width: 960px) {
+    .section-07{
+        /* padding: 90px 0 100px; */
+        padding: 9.375vw 0 10.416vw;
 
+    }
+    .section07-title_img{
+        /* width: 591px; */
+        width: 545px;
+        width: 56.77vw;
+        margin: 0 auto 86px;
+        margin: 0 auto 8.958vw;
+    }
+    
 }
