--- a/css/02.css
+++ b/css/02.css
@@ -1,5 +1,6 @@
 .section-02 {
-  padding: 96px 0 104px;
+  width: 100%;
+  padding: 96px 0 100px;
   background-image: url("../images/pc-sc02-bck@2x.webp");
   background-attachment: fixed;
   background-size: cover;
@@ -9,8 +10,10 @@
 .section-02 img {
   width: 100%;
   height: auto;
-  margin-top: 100px;
 }
 
-@media screen and (min-width: 961px) {
+@media screen and (max-width: 960px) {
+  .section-02 {
+    padding: 8.854vw 0 10.417vw;
+  }
 }
