--- a/css/03.css
+++ b/css/03.css
@@ -1,50 +1,73 @@
-.section-03{
+.section-03 {
+  width: 100%;
+  height: 1840px;
+  padding: 90px 0 96px;
+  background-image: url("../images/pc-sc03-bck@2x.webp");
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.section03-title_img {
+  display: block;
+  width: 883px;
+  height: auto;
+  margin: 0 auto 55px;
+}
+.section-03 .box-a ul {
+  margin: 48px 0 56px;
+}
+.section-03 .box-a ul li {
+  font-size: 30px;
+  font-weight: 600;
+  color: var(--base-darkblue);
+  display: inline-flex;
+  line-height: 1;
+  position: relative;
+  align-items: center;
+}
+.section-03 .box-a ul li::before {
+  content: "";
+  display: inline-block;
+  width: 70px;
+  height: 70px;
+  margin-right: 30px;
+  background-size: 70px 70px;
+}
+.section-03 .box-a ul li:nth-of-type(1)::before {
+  background-image: url("../images/sc03-li-1@2x.webp");
+}
+.section-03 .box-a ul li:nth-of-type(2)::before {
+  background-image: url("../images/sc03-li-2@2x.webp");
+}
+.section-03 .box-a ul li:nth-of-type(3)::before {
+  background-image: url("../images/sc03-li-3@2x.webp");
+}
+
+@media screen and (max-width: 960px) {
+  .section-03 {
     width: 100%;
-    height: 1840px;
-    padding: 90px 0 96px;
-    background-image: url('../images/pc-sc03-bck@2x.webp');
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-.section03-title_img{
-display: block;
-width: 883px;
-height: auto;
-margin: 0 auto 55px;
+    height: unset;
+    padding: 9.375vw 0 10vw;
+  }
 
-}
-.section-03 .box-a ul{
+  .section03-title_img {
+    width: 91.979vw;
+    height: auto;
+    margin: 0 auto 5.729px;
+  }
+  .section-03 .box-a ul {
     margin: 48px 0 56px;
-}
-.section-03 .box-a ul li{
-    font-size: 30px;
-    font-weight: 600;
-    color: var(--base-darkblue);
-    display: inline-flex;
-    line-height: 1;
-    position: relative;
-    align-items: center;
-}
-.section-03 .box-a ul li::before{
-    content: '';
+  }
+  .section-03 .box-a ul li {
+    font-size: 3.125vw;
+  }
+  .section-03 .box-a ul li::before {
+    content: "";
     display: inline-block;
-    width: 70px;
-    height: 70px;
-    margin-right: 30px;
-    background-size: 70px 70px;
-}
-.section-03 .box-a ul li:nth-of-type(1)::before{
-    background-image: url('../images/sc03-li-1@2x.webp');
-}
-.section-03 .box-a ul li:nth-of-type(2)::before{
-    background-image: url('../images/sc03-li-2@2x.webp');
-}
-.section-03 .box-a ul li:nth-of-type(3)::before{
-    background-image: url('../images/sc03-li-3@2x.webp');
-}
-
-@media screen and (min-width: 961px) {
-
+    width: 7.2917vw;
+    height: 7.2917vw;
+    margin-right: 3.125vw;
+    background-size: 7.2917vw 7.2917vw;
+  }
 }
