--- a/css/06.css
+++ b/css/06.css
@@ -1,5 +1,4 @@
 .section-06{
-    /* height: 1100px; */
     padding: 90px 0 100px;
     background-image: url('../images/pc-sc06-bck@2x.webp');
     background-attachment: fixed;
@@ -16,6 +15,19 @@
 .section-06 .shadow_img{
     filter: drop-shadow( 5px 5px 5px #777777);
 }
-@media screen and (min-width: 961px) {
+@media screen and (max-width: 960px) {
 
+    .section-06{
+        padding: 90px 0 100px;
+        padding: 9.375vw 0 10.412vw;
+    }
+    .section06-title_img{
+        width: 694px;
+        width: 72.291vw;
+        height: auto;
+        margin: 0 auto 75px;
+        margin: 0 auto 7.813vw;
+
+    }
+ 
 }
