--- a/css/08.css
+++ b/css/08.css
@@ -1,6 +1,5 @@
 .section-08{
-/* height: 1550px; */
-padding: 86px 0 100px; 
+padding: 90px 0 100px; 
 background-image: url('../images/pc-sc08-bck@2x.webp');
 background-attachment: fixed;
 background-size: cover;
@@ -13,13 +12,19 @@ background-position: center center;
     height: auto;
     margin: 0 auto 80px;
 }
-.section-08 h2{
-    font-size: 48px;
-    font-weight: 600;
-    line-height: 1.458;
-    letter-spacing: -0.0180em;
-    text-align: center;
-}
-@media screen and (min-width: 961px) {
+
+@media screen and (max-width: 960px) {
+
+    .section-08{
+        padding: 90px 0 100px; 
+        padding: 9.375vw 0 10.417vw;
+        }
+        .section08-title_img{
+            width: 603px;
+            width: 62.8125vw;
+            margin: 0 auto 80px;
+            margin: 0 auto 8.333vw;
+        }
+    
 
 }
