--- a/css/09.css
+++ b/css/09.css
@@ -1,5 +1,4 @@
 .section-09 {
-  /* height: 2540px; */
   padding: 166px 0 90px;
   background-image: url("../images/pc-sc09-bck@2x.webp");
   background-attachment: fixed;
@@ -15,7 +14,6 @@
   position: relative;
   /* filter: drop-shadow(3px 3px 3px #333333); */
   box-shadow: 0px 5px 5px #cccccc;
-
 }
 .section-09 .card:last-of-type {
   margin-bottom: unset;
@@ -63,5 +61,84 @@ img.parallelogram {
   transform: translateX(-50%);
 }
 
-@media screen and (min-width: 961px) {
+@media screen and (max-width: 960px) {
+  .section-09 {
+    /* padding: 166px 0 90px; */
+    padding: 114px 0 100px; 
+    padding: 15.325vw 0 10.412vw;
+  }
+  .card {
+    width: 100%;
+    margin-bottom: 140px;
+    padding: 0 80px 70px;
+    margin-bottom: 14.5889vw;
+    padding: 0 8.333vw 7.212vw;
+
+    /* background-color: white; */
+    /* position: relative; */
+    /* filter: drop-shadow(3px 3px 3px #333333); */
+    /* box-shadow: 0px 5px 5px #cccccc; */
+  }
+  .section-09 .card:last-of-type {
+    margin-bottom: unset;
+  }
+  .card img.pic {
+    /* 207 x 197 */
+    display: block;
+    position: absolute;
+    position: relative;
+    width: 207px;
+    height: 197px;
+    margin: unset;
+    left: 50%;
+    top:100px;
+    transform: translateX(-50%);
+
+
+    width:21.563vw;
+    height: 20.521vw;
+    top: 10.417vw;
+
+  }
+
+  .card ul {
+    margin-top: 100px;
+    padding-top: 80px;
+    padding-top: 38px;
+    margin-top: 10.412vw;
+    padding-top:3.956vw; ;
+  }
+  .card ul li {
+    /* font-size: 24px; */
+    font-size: 18px;
+    font-size: clamp(13px, 1.875vw, 18px);
+    line-height: 2.167;
+    letter-spacing: -0.016em;
+    color: var(--text-black);
+  }
+  .card ul li::before {
+    /* チェックボックス */
+    width: 24px;
+    width: 18px;
+    width: clamp(13px, 1.875vw, 18px);
+    height: 24px;
+    height: 18px;
+    height: clamp(13px, 1.875vw, 18px);
+    top: 0.2em;
+    margin-right: 24px;
+    margin-right: clamp(13px, 1.875vw, 18px);
+  }
+  img.parallelogram {
+    position: absolute;
+    width: 896px;
+    width:93.333vw;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 85px;
+    margin-top: unset;
+    top: -70px;
+    top:-7.292vw;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
