--- a/css/11.css
+++ b/css/11.css
@@ -15,6 +15,27 @@ footer{
     font-size: 18px;
     line-height: 1.5;
 }
-@media screen and (min-width: 961px) {
+@media screen and (max-width: 960px) {
+  .section-11{
+    height: 660px;
+    height: auto;
+    padding-top: 80px;
+    padding-top: 8.333vw;
+    background-image: url('../images/pc-sc11-bck@2x.webp');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+footer{
+    text-align: center;
+    padding: 50px 0;
+    padding: 5.208vw;
+    color:white;
+    background-color: var(--base-darkblue);
+  font-family: "Meiryo", "メイリオ", sans-serif;
+    font-size: 18px;
+    font-size: clamp(10px, 1.875vw, 18px);
+    line-height: 1.5;
+}
 
 }
