--- a/css/05.css
+++ b/css/05.css
@@ -6,6 +6,10 @@
   background-repeat: no-repeat;
   background-position: center center;
 }
+.sc05-title_img.pc-none,
+.profile_img.pc-none {
+  display: none;
+}
 .profile {
   width: 880px;
   height: auto;
@@ -35,26 +39,33 @@
 @media screen and (max-width: 960px) {
   .section-05 {
     padding: 6.875vw 0 8.333vw;
+    padding: 6.875vw 0 8.333vw;
     background-image: url("../images/sp-sc05-bck@2x.webp");
+    height: auto;
   }
-  .profile {
-    width: 800px;
+  .sc05-title_img.pc-none {
+    display: block;
     width: 83.333vw;
-    background-image: url("../images/sp-yuzu2@2x.webp");
-    background-position: top 16px center;
-    margin: 0 auto;
-    padding-top: 646px;
-    padding-top: 67.292vw;
-    padding-top: 68.96vw;
-    padding-left: 40px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .profile {
+    width: 83.333vw;
+    background-image: unset;
+    margin: 35.417vw auto 0;
+    padding-top: 9.375vw;
     padding-left: 4.167vw;
-    padding-right: 40px;
     padding-right: 4.167vw;
     font-size: 1.875vw;
+    position: relative;
+    border: solid 0.625vw;
     background-color: white;
+    border-image: linear-gradient(45deg, #fbc2d5, #b3d4fc) 1;
   }
   .profile .name {
-    margin-top: 10px;
+    margin-top: 1.0417vw;
     font-size: 5vw;
     text-align: center;
   }
@@ -63,11 +74,18 @@
     text-align: center;
   }
   .profile .title {
-    margin-top: 25px;
-margin-top: 2.604vw;
-    padding-bottom: 80px;
-    padding-bottom: 8.333vw;
-    font-size: clamp( 13px, 1.875vw, 18px);
+    margin-top: 4.167vw;
+    padding-bottom: 6.25vw;
+    font-size: clamp(13px, 1.875vw, 18px);
     text-align: justify;
+    background-color: white;
+  }
+  .profile .profile_img.pc-none {
+    display: block;
+    width: 35.833vw;
+    height: auto;
+    position: absolute;
+    top: -32.083vw;
+    left: 23.958vw;
   }
 }
