--- a/css/01.css
+++ b/css/01.css
@@ -92,7 +92,7 @@ header {
   margin-top: 1270px;
 }
 .fv-memo {
-  width: fit-content;
+  width: 100%;
   font-size: 18px;
   line-height: 1.5;
   font-family: "Meiryo", "メイリオ", sans-serif;
@@ -104,9 +104,6 @@ header {
   position: absolute;
   left: -1.2em;
 }
-
-/*  */
-/*  */
 
 @media screen and (max-width: 960px) {
   .section-01 {
@@ -133,6 +130,7 @@ header {
   .fv-memo {
     display:block;
     width:fit-content;
+    margin: 0 auto;
     font-size: clamp( 10px, 1.354vw, 13px);
   }
   .fv-copy {
